--- a/res/layout/big_map.xml
+++ b/res/layout/big_map.xml
@@ -3,7 +3,6 @@
     android:id="@+id/map"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:name="com.google.android.gms.maps.MapFragment" >
-    
+    class="com.google.android.gms.maps.SupportMapFragment" >
 
 </fragment>
