Changes for fragment map. Still does not work.

--- a/res/layout/fragment_whats_hot.xml
+++ b/res/layout/fragment_whats_hot.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
@@ -10,10 +9,10 @@
             android:layout_height="wrap_content"
             android:text="Whats Hot"
             android:id="@+id/textView" android:layout_gravity="left|center_vertical"/>
-    <ImageView
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:id="@+id/imageView" android:layout_gravity="center"
-            android:src="@drawable/map_placeholder"/>
 
+      <com.google.android.gms.maps.MapView
+              android:id="@+id/mapView"
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent"
+          />
 </LinearLayout>
