--- a/res/layout/fragment_whats_hot.xml
+++ b/res/layout/fragment_whats_hot.xml
@@ -1,18 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/whats_hot"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    class="com.google.android.gms.maps.SupportMapFragment" >
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Whats Hot"
-            android:id="@+id/textView" android:layout_gravity="left|center_vertical"/>
-
-      <com.google.android.gms.maps.MapView
-              android:id="@+id/mapView"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent"
-          />
-</LinearLayout>
+</fragment>
