--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -1,9 +1,12 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <item
-        android:id="@+id/menu_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/menu_settings"/>
-
+<?xml version="1.0" encoding="utf-8"?>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/whats_hot"
+          android:title="Whats Hot"
+          android:showAsAction="ifRoom|withText" />
+    <item android:id="@+id/my_map"
+          android:title="My Map"
+          android:showAsAction="ifRoom|withText" />
+    <item android:id="@+id/subscriptions"
+          android:title="Subscriptions"
+          android:showAsAction="ifRoom|withText" />
 </menu>
