--- a/res/layout/fragment_spark_map.xml
+++ b/res/layout/fragment_spark_map.xml
@@ -1,8 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/spark_map"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    class="com.google.android.gms.maps.SupportMapFragment" >
+    android:orientation="vertical" >
 
-</fragment>
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/sparkMapView"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
+    
+    <Button
+        android:id="@+id/whatsHotButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:foregroundGravity="center_horizontal|bottom" />
+
+</FrameLayout>
