--- a/res/layout/fragment_spark_map.xml
+++ b/res/layout/fragment_spark_map.xml
@@ -11,8 +11,8 @@
     
     <Button
         android:id="@+id/whatsHotButton"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:foregroundGravity="center_horizontal|bottom" />
+        android:layout_gravity="left|bottom" />
 
 </FrameLayout>
