--- a/res/layout/fragment_spark_map.xml
+++ b/res/layout/fragment_spark_map.xml
@@ -1,25 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" >
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.9"
-        android:orientation="vertical" >
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/sparkMapView"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
 
-        <com.google.android.gms.maps.MapView
-            android:id="@+id/sparkMapView"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent" />
-    </FrameLayout>
-
-    <Button
-        android:id="@+id/whatsHotButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left|bottom" />
-
-</LinearLayout>
+</FrameLayout>
