--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -2,4 +2,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
           android:id="@+id/text1"
           android:layout_width="fill_parent"
-          android:layout_height="wrap_content" />
+          android:layout_height="wrap_content"
+          android:padding="10dp"
+          android:textSize="16sp"
+        />
