Added more to place expanded activity.

--- a/res/layout/place_expanded.xml
+++ b/res/layout/place_expanded.xml
@@ -33,6 +33,12 @@
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/phoneTextView" android:layout_gravity="left|center_vertical"
+            android:textColor="@color/blue"
+            android:clickable="true"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/vicinityTextView" android:layout_gravity="left|center_vertical"
             android:textColor="@color/blue"/>
     <TextView
@@ -45,6 +51,12 @@
             android:layout_height="wrap_content"
             android:id="@+id/priceLevelTextView" android:layout_gravity="left|center_vertical"
             android:textColor="@color/blue"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/websiteTextView" android:layout_gravity="left|center_vertical"
+            android:textColor="@color/blue"
+            android:clickable="true"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
