--- a/res/layout/place_expanded.xml
+++ b/res/layout/place_expanded.xml
@@ -24,40 +24,82 @@
         />
     </LinearLayout>
     <TextView
-            android:visibility="gone"
+            android:text="Address: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left|center_vertical"
+            android:textColor="@color/blue"/>
+    <TextView
+            android:layout_marginLeft="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/addressTextView"
             android:layout_gravity="left|center_vertical"
             android:textColor="@color/blue"/>
     <TextView
+            android:text="Phone: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:layout_gravity="left|center_vertical"
+            android:textColor="@color/blue"/>
+    <TextView
+            android:layout_marginLeft="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/phoneTextView" android:layout_gravity="left|center_vertical"
             android:textColor="@color/blue"
             android:clickable="true"/>
     <TextView
+            android:text="Vicinity: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:layout_gravity="left|center_vertical"
+            android:textColor="@color/blue"/>
+    <TextView
+            android:layout_marginLeft="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/vicinityTextView" android:layout_gravity="left|center_vertical"
             android:textColor="@color/blue"/>
     <TextView
+            android:text="Rating: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:layout_gravity="left|center_vertical"
+            android:textColor="@color/blue"/>
+    <TextView
+            android:layout_marginLeft="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/ratingTextView" android:layout_gravity="left|center_vertical"
             android:textColor="@color/blue"/>
     <TextView
+            android:text="Price Level: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:layout_gravity="left|center_vertical"
+            android:textColor="@color/blue"/>
+    <TextView
+            android:layout_marginLeft="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/priceLevelTextView" android:layout_gravity="left|center_vertical"
             android:textColor="@color/blue"/>
     <TextView
+            android:text="Website: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:layout_gravity="left|center_vertical"
+            android:textColor="@color/blue"
+            android:clickable="true"/>
+    <TextView
+            android:layout_marginLeft="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/websiteTextView" android:layout_gravity="left|center_vertical"
             android:textColor="@color/blue"
             android:clickable="true"/>
     <TextView
+            android:text="Open: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:layout_gravity="left|center_vertical"/>
+    <TextView
+            android:layout_marginLeft="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/openTextView" android:layout_gravity="left|center_vertical"/>
