--- a/res/menu/fragment_map.xml
+++ b/res/menu/fragment_map.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/whats_hot"
-          android:title="@string/show_whats_hot"
-          android:showAsAction="ifRoom|withText" />
+<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+
+    <item
+        android:id="@+id/whats_hot"
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/show_whats_hot"/>
+    <item
+        android:id="@+id/subscriptions"
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/show_subscriptions"/>
+
 </menu>
