--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -3,7 +3,7 @@
     <item
         android:id="@+id/search"
         android:actionViewClass="android.widget.SearchView"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_action_search"
         android:showAsAction="collapseActionView|ifRoom"
         android:title="@string/search_title"/>
 
