--- a/res/menu/fragment_map.xml
+++ b/res/menu/fragment_map.xml
@@ -2,12 +2,24 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/whats_hot"
+        android:id="@+id/overlay_menu"
         android:showAsAction="ifRoom|withText"
-        android:title="@string/show_whats_hot"/>
-    <item
-        android:id="@+id/subscriptions"
-        android:showAsAction="ifRoom|withText"
-        android:title="@string/show_subscriptions"/>
+        android:icon="@drawable/ic_action_layers"
+        android:title="menu">
+        <menu>
+            <item
+                android:id="@+id/whats_hot"
+                android:icon="@drawable/ic_action_whats_hot_disabled"
+                android:title="@string/whats_hot"/>
+            <item
+                android:id="@+id/subscriptions"
+                android:icon="@drawable/ic_action_favorites_disabled"
+                android:title="@string/subscriptions"/>
+            <item 
+                android:id="@+id/search_again"
+                android:title="@string/search_title"
+                android:icon="@drawable/ic_action_search"/>
+        </menu>
+    </item>
 
 </menu>
