--- a/res/layout/place_expanded.xml
+++ b/res/layout/place_expanded.xml
@@ -107,7 +107,7 @@
             android:id="@+id/findParkingButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Find Parking"
+            android:text="Subscribe"
             style="@style/btn_submit"
             />
 </LinearLayout>
