--- a/res/layout/lot_expanded.xml
+++ b/res/layout/lot_expanded.xml
@@ -23,11 +23,11 @@
             android:text="47 Spots Available"
             android:textSize="20dp"
             android:id="@+id/textView1" android:layout_gravity="left|center_vertical"/>
-    <ImageView
-            android:layout_width="wrap_content"
+    <LinearLayout
+            android:id="@+id/chart"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/imageView"
-            android:src="@drawable/graph"/>
+            android:orientation="horizontal" />
     <Button
             android:id="@+id/navigationButton"
             android:onClick="startNavigation"
