--- a/res/layout/fragment_subscriptions.xml
+++ b/res/layout/fragment_subscriptions.xml
@@ -4,10 +4,9 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-
-
     <ListView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/listView"/>
+            android:id="@+id/listView"
+            style="@style/list_style_seperated"/>
 </LinearLayout>
